Fix header overlap
navbar bisa, collapse blm fix

--- a/public/css/main-page.css
+++ b/public/css/main-page.css
@@ -29,6 +29,16 @@ body {
     color: #000000;
 
 }
+
+@media (max-width: 768px) {
+    .sosmed {
+      display: none;
+    }
+    .brand {
+        margin-bottom: 20px;
+    }
+  }
+
 /* css header */
 
 header {
@@ -75,7 +85,7 @@ header {
 
 nav {
     height: 68px;
-}
+} 
 .navbar {
     padding: 0px;
     font-size: 18px;
@@ -101,9 +111,20 @@ nav {
     color: #000000;
 }
 .nav-item {
-    padding: 0px 12%;
+    padding: 0px 10%;
     color: #000000;
-}
+} 
+
+@media (max-width: 768px) {
+    nav {
+        display: inline-block;
+        max-height: none;
+        
+    }
+    body {
+        margin: 0;
+    }
+  }
 
 /* css carousel */
 
@@ -158,12 +179,24 @@ nav {
     font-size: 30px;
     font-weight: 500;
 }
+@media (max-width: 768px) {
+    #hero-area {
+      display: none;
+    }
+  }
 
 /* css profil */
 
 #profil {
     margin: 60px 0;
 }
+
+@media (max-width: 768px) {
+    #profil {
+      display: inline-block;
+      position: relative;
+    }
+  }
 
 #profil h2 {
     font-size: 27px;
